# PyCircuitSim

./: .gitignore  README.md  pyproject.toml
docs/: reference.md
examples/get_matrix/: test_ac_get_matrix.py  test_op_get_matrix.py
examples/inverter/: inverter.py
examples/plots/: diode_rectifier.py  low_pass_filter_corner_analysis.py  low_pass_filter_parametric_sweep.py
examples/simulator/: test_ac.py  test_dc.py  test_four.py  test_op.py  test_pz.py  test_sens.py  test_subcircuit.py  test_tran.py
examples/veriloga/: test_veriloga_netlisting.py  test_veriloga_simulator.py
pycircuitsim/netlisting/: __init__.py  circuit.py  circuit_components.py  circuit_methods.py
pycircuitsim/netlisting/components/: __init__.py  base.py  dependent.py  independent.py  instance.py  passive.py  semiconductors.py
pycircuitsim/netlisting/pwl_generator/: pwl_generator.py  waveforms.py
pycircuitsim/simulator/: __init__.py  helpers.py  matrix_parser.py  parameter_modifier.py  parametric_sweep.py  session.py  simulations.py  veriloga_model.py
pycircuitsim/simulator/ngspice/: __init__.py  callbacks.py  (+2 more)
tests/get_matrix/: test_ac_get_matrix.py  test_op_get_matrix.py
tests/netlisting/: test_components.py
tests/plots/: diode_rectifier.py  low_pass_filter_corner_analysis.py  low_pass_filter_parametric_sweep.py  pwl_generator.py
tests/simulator/: test_ac.py  test_dc.py  test_four.py  test_noise.py  test_op.py  test_pz.py  test_sens.py  test_subcircuit.py  test_tf.py  test_tran.py
tests/veriloga/: my_res.osdi  my_res.va  test_veriloga_netlisting.py  test_veriloga_simulator.py
(+18 files in other folders)
