[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "PyCircuitSim"
version = "0.1.0"
description = "A Python tool for building and simulating analog circuits using ngspice"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Mohamed Watfa", email = "medwatt@hotmail.com" }
]
dependencies = [
    "numpy>=1.24",
]

[project.urls]
Repository = "https://github.com/medwatt/PyCircuitSim"

[tool.setuptools.packages.find]
where = ["."]
include = ["pycircuitsim*"]
